View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028053 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-11-05 16:18 | 2016-12-09 16:39 |
Reporter | abv | Assigned To | abv | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0028053: Regressions in HLR when FPE signals are enabled | ||||
Description | When FPE signals are enabled on current master (by setting environment variable CSF_FPE to 1), many tests fail due to FPE exceptions in HLR algorithm (see the list in Additional Information field). Debugging of the problem on one case (bugs modalg_6 bug27280) shown that FPE overflow exception occurs in HLRBRep_EdgeData::Set(), when resolution computed on a curve is too big for a float. The problem is in the curve: it is B-Spline with two coincident poles (i.e. zero length), hence its derivative is zero and resultion is returned as 3d tolerance divided by RealSmall(). This yields 1e300 which cannot be represented by float. | ||||
Steps To Reproduce | See additional information. | ||||
Additional information and documentation updates | List of failed tests: bugs modalg_5 bug23625_1 bugs modalg_5 bug23625_2 bugs modalg_5 bug23625_3 bugs modalg_5 bug23625_4 bugs modalg_5 bug23625_5 bugs modalg_6 bug27280 bugs modalg_6 bug27341_101 bugs modalg_6 bug27341_102 bugs modalg_6 bug27341_103 bugs modalg_6 bug27341_104 bugs modalg_6 bug27341_105 bugs modalg_6 bug27341_106 bugs modalg_6 bug27341_107 bugs modalg_6 bug27341_201 bugs modalg_6 bug27341_202 bugs modalg_6 bug27341_203 bugs modalg_6 bug27341_204 bugs modalg_6 bug27341_205 bugs modalg_6 bug27341_206 bugs modalg_6 bug27341_207 bugs modalg_6 bug27341_303 bugs modalg_6 bug27341_304 bugs modalg_6 bug27341_305 bugs modalg_6 bug27341_306 bugs modalg_6 bug27341_307 bugs modalg_6 bug27341_308 bugs modalg_6 bug27341_310 bugs modalg_6 bug27341_312 bugs modalg_6 bug27341_313 bugs modalg_6 bug27341_314 bugs modalg_6 bug27341_315 bugs modalg_6 bug27341_316 bugs modalg_6 bug27341_317 bugs modalg_6 bug27341_318 bugs modalg_6 bug27341_319 bugs modalg_6 bug27341_320 bugs modalg_6 bug27341_322 bugs modalg_6 bug27341_323 bugs modalg_6 bug27341_325 bugs modalg_6 bug27341_329 bugs modalg_6 bug27719_101 bugs modalg_6 bug27719_102 bugs modalg_6 bug27719_103 bugs modalg_6 bug27719_104 bugs modalg_6 bug27719_105 bugs modalg_6 bug27719_201 bugs modalg_6 bug27719_202 bugs modalg_6 bug27719_203 bugs modalg_6 bug27719_204 bugs modalg_6 bug27719_205 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
The regression is caused by fix for #27720 |
|
Branch CR28053 has been created by msv. SHA-1: e11cb00adc6fd91354a625ac0052ff948c39d99f Detailed log of new commits: Author: msv Date: Mon Nov 7 15:49:54 2016 +0300 0028053: Regressions in HLR when FPE signals are enabled Protect Contap_Contour from creation of null-length curves. |
|
Dear Julia, please review the branch CR28053. |
|
Ok. |
|
Dear BugMaster, Branch CR28053 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: e11cb00adc6fd91354a625ac0052ff948c39d99f Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1123 Regressions/Differences/Improvements: http://occt-tests/CR28053-master-OCCT/Debian70-64/bugs/modalg_6/bug27720_5.html http://occt-tests/CR28053-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug27720_5.html bugs modalg_6 bug27720_5: FAILED Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 91266065 / 90855967 [+0.45%] Total CPU difference: 19403.96999999975 / 19283.799999999883 [+0.62%] products component : Total MEMORY difference: 30599457 / 30607347 [-0.03%] Total CPU difference: 5347.129999999979 / 5334.449999999971 [+0.24%] Testing on Windows: occt component : Total MEMORY difference: 57445390 / 57454639 [-0.02%] Total CPU difference: 18297.809692898576 / 18371.254963698717 [-0.40%] products component : Total MEMORY difference: 21509459 / 21473993 [+0.17%] Total CPU difference: 5255.97009189998 / 5159.514673599959 [+1.87%] There are no differences in images found by testdiff. |
|
Dear msv, Branch CR28053 has been rejected due to: - regressions/differences/improvements |
|
Tested in scope of CR0-IR-2016-11-08 |
|
Branch CR28053 has been deleted by kgv. SHA-1: e11cb00adc6fd91354a625ac0052ff948c39d99f |
occt: master 4af9e8a8 2016-11-07 12:49:54 Committer: abv Details Diff |
0028053: Regressions in HLR when FPE signals are enabled Protect Contap_Contour from creation of null-length curves. |
Affected Issues 0028053 |
|
mod - src/Contap/Contap_Contour.cxx | Diff File | ||
mod - tests/bugs/modalg_6/bug27720_5 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-11-05 16:18 | abv | New Issue | |
2016-11-05 16:18 | abv | Assigned To | => msv |
2016-11-05 16:18 | abv | Note Added: 0059903 | |
2016-11-07 15:50 | git | Note Added: 0059940 | |
2016-11-07 15:51 | msv | Assigned To | msv => jgv |
2016-11-07 15:51 | msv | Status | new => resolved |
2016-11-07 15:51 | msv | Steps to Reproduce Updated | |
2016-11-07 15:51 | msv | Note Added: 0059941 | |
2016-11-07 18:42 | jgv | Note Added: 0059949 | |
2016-11-07 18:42 | jgv | Assigned To | jgv => bugmaster |
2016-11-07 18:42 | jgv | Status | resolved => reviewed |
2016-11-07 19:07 |
|
Assigned To | bugmaster => mkv |
2016-11-08 15:10 | msv | Relationship added | related to 0028063 |
2016-11-08 18:11 | msv | Relationship deleted | related to 0028063 |
2016-11-08 18:12 | msv | Relationship added | duplicate of 0028063 |
2016-11-08 18:35 |
|
Note Added: 0060060 | |
2016-11-08 18:35 |
|
Note Added: 0060061 | |
2016-11-08 18:35 |
|
Assigned To | mkv => msv |
2016-11-08 18:35 |
|
Status | reviewed => feedback |
2016-11-08 19:12 | kgv | Relationship replaced | has duplicate 0028063 |
2016-11-09 11:56 |
|
Test case number | => Not needed |
2016-11-09 11:57 |
|
Note Added: 0060086 | |
2016-11-09 11:57 |
|
Assigned To | msv => bugmaster |
2016-11-09 11:57 |
|
Status | feedback => tested |
2016-11-09 17:43 | abv | Changeset attached | => occt master 4af9e8a8 |
2016-11-09 17:43 | abv | Assigned To | bugmaster => abv |
2016-11-09 17:43 | abv | Status | tested => verified |
2016-11-09 17:43 | abv | Resolution | open => fixed |
2016-12-07 11:31 | git | Note Added: 0061266 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |