0028053: Regressions in HLR when FPE signals are enabled

Protect Contap_Contour from creation of null-length curves.